src/test/test_Lexing/test8.c
char c1 = '\''; 
char c2 = 'a';  
char c3 = 'a'; // error 
char c4 = '"';    
char* str = "Hello, \"world!\""; 
char* invalidStr = "Unterminated string; // Invalid";
